--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "axios": "^1.7.7",
     "babel-plugin-import": "^1.13.8",
     "isomorphic-fetch": "^3.0.0",
+    "jest": "^29.7.0",
     "notistack": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-is": "^18.3.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "ts-jest": "^29.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -31,6 +33,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
@@ -42,7 +45,6 @@
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^4.5.1",
-    "jest": "^26.6.3",
     "json-server": "^0.16.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
